@@ -28,3 +28,8 @@ CL-USER> (pdf:pdf2text "/mnt/chromeos/MyFiles/Downloads/meiji-new-testament.pdf"
  "一二イエスヨハネ　とらは囚　れし　こと事　を　き聞　てガリラヤに　き往　一三ナザレを　さり去 ........　でし弟子　　たち等　も　その其　　もと下　に　きた來　れり二イエス　くち口　を　ひらき啓　て　かれ彼　　ら等　に　をし釄　へ　いひ曰　ける三　ころ心　の　まづ貧　しき　もの者　　さいはひ　り　てん天　　こく國　　すなは即　ち　その其　　ひと人　の　もの有　なれ゛　なり也　四　かなし哀　む　もの者　　さいはひ　り　その其　　ひと人　　なぐさめ安慰　を　う得　べけれ゛　なり也　五　にう柔　　わ和　なる　もの者　　さいはひ　り　その其　　ひと人　　ち地　を　つぐ嗣　ことを　う得　べけれ゛　なり也　六　うゑ餓　　かわく渇　ごとく　ぎ義　を　たふ慕　　もの者　　さいはひ　り　その其　　ひと人　　あく飽　ことを　う得　べけれ゛　なり也　七　あはれみ矜恤　ある　もの者　　さいはひ　り　その其　　ひと人　　あはれみ矜恤　を　う得　べけれ゛　なり也　八　ころ心　の　きよ　き　もの者　　さいはひ　り　その其　　ひと人　　かみ　を　みる見　ことを　う得　べけれ゛　なり也　九　やはらぎ和平　を　もとむ求　る　もの者　　さいはひ　り　その其　　ひと人　　かみ　の　こ子　と　となへ稱　らる　べけ可　れ゛なり一〇　た゛しき義　ことの　ため爲　に　せめ責　らる　もの者　　さいはひ　り　てん天　　こく國　　すなは即　ち"
 "𛂜𛃥𛂦𛂞𛁈𛁈𛂁𛂞𛃥𛁚𛂞𛂁𛂞𛁈𛁈𛁈𛀙𛂞𛂞𛃥𛂞𛁈𛂞𛂞𛂞𛂁𛂞𛂞𛂞𛂁𛂞𛂞𛂞𛂁𛂞𛂞𛁈𛂞𛂁𛂞𛂞𛂞𛂁𛂞𛂞𛂞𛂁𛂞𛂞𛂞𛂁𛂞𛂞𛂞𛂁𛂞" "9")
 #+END_SRC
+** token-to-string
+Debug用にtoken-to-stringをつくった。
+: CL-USER> (pdf::token-to-string '("<30e4>" "4" "<30b7>" "4" "<30cb>" "5" "<30f6>" "4" "<30c3>"))
+: (#\HIRAGANA_LETTER_HE #\HIRAGANA_LETTER_KI #\HIRAGANA_LETTER_TA
+:  #\HIRAGANA_LETTER_RI #\HIRAGANA_LETTER_SI)
